# pycaprio

./: CONTRIBUTING.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish_to_pypi.yml  run_tests.yml
docs/: tests.md
pycaprio/core/: pycaprio.py
pycaprio/core/adapters/: http_adapter.py  local_adapter.py
pycaprio/core/clients/: retryable_client.py
pycaprio/core/interfaces/: adapter.py  client.py
pycaprio/core/objects/: annotation.py  curation.py  document.py  project.py
tests/integ_tests/: conftest.py  test_curation.py
tests/unit_tests/core/adapters/: test_http_adapter.py
tests/unit_tests/core/clients/: test_retryable_client.py
